cloudformation/createStack.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Sample CloudFormation Template for CSYE 6225 - Fall 2017",
    "Resources": {
        "EC2Instance": {
            "Type": "AWS::EC2::Instance",
            "Properties": {
				"KeyName" : "aws-key-pair",
                "ImageId": "ami-cd0f5cb6",
                "InstanceType": "t2.micro",
                "SecurityGroupIds": [
                    {
                        "Fn::GetAtt": [
                            "csye6225webapp",
                            "GroupId"
                        ]
                    }
                ],
				"DisableApiTermination": "TRUE",
				"BlockDeviceMappings" : [
                {
                "DeviceName" : "/dev/sda1",
                "Ebs" : { 
                          "DeleteOnTermination": true,
                          "SnapshotId": "snap-0cfc17b071e696816",
                          "VolumeSize": 16,
                          "VolumeType": "gp2"
                        } 
                }
                ]
            }
        },
		"ResourceRecordSet" : {
		"Type" : "AWS::Route53::RecordSet",
		"Properties" : {
        "HostedZoneId" : "Z1V8ZHS4H3Z5H7",
        "Comment" : "DNS name for my instance.",
        "Name" : "ec2.csye6225-fall2017-patilsur.me",
        "Type" : "A",
        "TTL" : "60",
        "ResourceRecords" : [ { "Fn::GetAtt" : [ "EC2Instance", "PublicIp" ] } ]
		}
		},
        "csye6225webapp": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
				
                "GroupDescription": "Enable HTTP access via port 80, SSH access via port 22, HTTPS access via port 443",
                "VpcId": "vpc-56fd1a2e",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "0.0.0.0/0"
                    },
					{
                        "IpProtocol": "tcp",
                        "FromPort": "443",
                        "ToPort": "443",
                        "CidrIp": "0.0.0.0/0"
                    }
                ]
            } 
        } ,

	"csye6225rds": {
   		"Type": "AWS::RDS::DBSecurityGroup",
   		"Properties": {
      			"EC2VpcId" : [ { "Fn::GetAtt" : [ "EC2Instance", "VpcId" ] } ],
      			"DBSecurityGroupIngress": [
        			 {"EC2SecurityGroupName": { "Ref": "csye6225webapp"}}
     						 ],
     			 "GroupDescription": "Frontend Access"
   				}
			}
    }
}
